--- a/TestProgrammer.App/TestProgrammer.App.Android/TestProgrammer.App.Android.csproj
+++ b/TestProgrammer.App/TestProgrammer.App.Android/TestProgrammer.App.Android.csproj
@@ -52,6 +52,12 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator">
+      <Version>16.1.0.37</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfNumericUpDown">
+      <Version>16.1.0.37</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.2.0</Version>
     </PackageReference>
